<resources>
    <string name="app_name">RUM Android</string>
    <string name="title_home">Home</string>
    <string name="title_product">Product</string>
    <string name="title_customers">Customers</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="cpf">CPF</string>
    <string name="name">Name</string>
    <string name="product_description">Description</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_price">Price</string>
</resources>